welcome.lessons.welcome.bat.bool2.NearTen.scala.code
def nearTen(num:Int):Boolean = {
	if ((num%10) <= 2 && (num%10)<=5) {
		return true;
	} else if ((num%10) <= 2 && (num%10)>=5) {
		if ((num%10)%5) {
			return true
		} else { return false}
	} else {
		return false;
	}
}
